--- a/seafoodapp/templates/beranda.html
+++ b/seafoodapp/templates/beranda.html
@@ -5,6 +5,8 @@
     {{Heading}}
 </h1>
 <br><br>
+
+<div class="container">
 <table class="table table-striped table-hover" width="100%">
 
     <thead>
@@ -33,7 +35,8 @@
 {% endfor %}
     </tbody>
     </table>
-
+    <a class="btn btn-success" href="/tambah_sea">Tambah Data</a>
+  </div>
     <script>
       function hapus_seafood(id_seafood, nama)
       {swal({
@@ -52,5 +55,5 @@
       });}
     </script>
 
-    <a class="btn btn-success" href="/tambah_sea">Tambah Data</a>
+   
 {% endblock %}
