--- a/seafoodapp/templates/update_map.html
+++ b/seafoodapp/templates/update_map.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<div class="container">
 <br>
 <h1>{{Heading}}</h1>
+
 <div class="container">
 <div class="row">
     <div class="col-md-6">
@@ -10,17 +12,18 @@
         <script>
             swal("Data berhasil ditambahkan", "{{ pesan }}", "success");
         </script>
-    
          {% endif %}
-            <form action="/tambah_sea/" method="POST">
+            <form action="{% url 'update_map' maps.id %}" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
 
-                <input type="submit" value="simpan" class="btn btn-primary">
-                <a href="/beranda" class="btn btn-warning">Kembali</a>
+                <input type="submit" value="Simpan" class="btn btn-primary">
+                <a href="/lokasi" class="btn btn-warning">Kembali</a>
             </form>
 
 </div>
 </div>
 </div>
+</div>
+<br><br><br>
 {% endblock %}
