--- a/seafoodapp/templates/update_sea.html
+++ b/seafoodapp/templates/update_sea.html
@@ -4,6 +4,7 @@
 <br>
 <h1>{{Heading}}</h1>
 
+<div class="container">
 <div class="row">
     <div class="col-md-6">
         {% if pesan %}
@@ -21,5 +22,5 @@
 
 </div>
 </div>
-
+</div>
 {% endblock %}
