--- a/templates/base.html
+++ b/templates/base.html
@@ -7,29 +7,67 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="logo" href="https://cdn-icons-png.flaticon.com/512/1238/1238966.png?w=740&t=st=1667054596~exp=1667055196~hmac=d2d0c44a129d794cfebaec636157cf6a34a7680fc4c13af5a77a3791a301fd18">
     <title>{{Title}}</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="anonymous"/>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/782/782930.png">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <!--tabel-->
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
   </head>
+
+  <style>
+    #map {
+			height: 300px;
+			width: 100%;
+			max-width: 100%;
+			max-height: 100%;
+		}
+  </style>
+  
   <body>
 
     <!--navbar-->
-    <nav class="navbar bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/beranda">
-          <img src="https://cdn-icons-png.flaticon.com/512/1238/1238966.png?w=740&t=st=1667054596~exp=1667055196~hmac=d2d0c44a129d794cfebaec636157cf6a34a7680fc4c13af5a77a3791a301fd18" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          Data Seafood
-        </a>
+        <a class="navbar-brand" href="/index"><img src="https://cdn-icons-png.flaticon.com/512/782/782930.png" alt="" width="40px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/lokasi">Lokasi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/beranda">Seafood</a>
+            </li>
+          </ul>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <h6 class="nav-link" style="color: black;"><img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" width="30px" alt="">
+                Hello, {{request.user}}</h6>
+            </li>
+            <li class="nav-item">
+              <a class=" btn btn-danger" href="{% url 'logout' %}">Logout</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-      <img src="{% static 'wave.svg' %}" alt="wave" width="100%">
-    
-      <div class="container">
+
+
         {% block content %}
 
         {% endblock %}
 
-      </div>
+
    
     <br><br><br>
     <footer class="text-center text-white" style="background-color: #f1f1f1;">
@@ -71,12 +109,32 @@
     
       <!-- Copyright -->
       <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2022 Copyright:
+        © 2023 Copyright:
         <a class="text-dark" href="https://www.instagram.com/ra_ra.8/">Ratih Nurmasari</a>
       </div>
       <!-- Copyright -->
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script>
+      const map = L.map('map').setView([-6.125637654944591, 106.14647007768134], 15);
+
+      const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    }).addTo(map);
+
+    L.marker([map.koordinat]).addTo(map);
+
+    </script>
+
+    <script>
+      $(document).ready(function () {
+      $('#seafood').DataTable();
+      });
+    </script>
+
+
   </body>
 </html>
